--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,9 @@
 
     <section class="section1">
 
-        <p><a href="https://github.com/JuliusKer?tab=repositories">GitHub</a><br><a href="https://oce.op.gg/summoners/oce/AuS%20jenats">LoL Account</a><br></p>
+        <p><a href="https://github.com/JuliusKer?tab=repositories">GitHub</a><br>
+            <a href="https://oce.op.gg/summoners/oce/AuS%20jenats">LoL Account</a><br>
+            <a href="mailto:juliuskerstien@outlook.com">Send email</a><br></p>
           
     </section>
 
