--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
             <article class="article">
 
-                <h1>WELCOME</h1>
+                <h1>Welcome to my sample website</h1>
 
                 <section class="section1">
 
                     <p>
-                        Jenats best player OCE
+                        This website in still in progress
                     </p>
 
                 </section>
