--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>datthew</title>
+    <title>jenats</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
 
@@ -24,10 +24,10 @@
         <nav class="navbar">
 
             <ul>
-                <a href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
+                <a class="active" href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
                 <a href="art.html"><i class="fa fa-paint-brush" style="font-size:18px;"></i> Art</a>
-                <a href="games.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> Games</a>
-                <a class="active"href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
+                <a href="LoLJenats.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> LoL Jenats</a>
+                <a href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
             </ul>
 
         </nav>
