navbar light fix

--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
         <nav class="navbar">
 
             <ul>
-                <a class="active" href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
+                <a href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
                 <a href="LoLJenats.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> LoL Jenats</a>
-                <a href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
+                <a class="active" href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
             </ul>
 
         </nav>
