--- a/LoLJenats.html
+++ b/LoLJenats.html
@@ -24,8 +24,8 @@
         <nav class="navbar">
 
             <ul>
-                <a class="active" href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
-                <a href="LoLJenats.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> LoL Jenats</a>
+                <a href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
+                <a class="active"href="LoLJenats.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> LoL Jenats</a>
                 <a href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
             </ul>
 
