change contact email

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
         <p><a href="https://github.com/JuliusKer?tab=repositories">GitHub</a><br>
             <a href="https://oce.op.gg/summoners/oce/AuS%20jenats">LoL Account</a><br>
-            <a href="mailto:juliuskerstien@outlook.com">Send email</a><br></p>
+            <a href="mailto:colloc132@hotmail.de">Send email</a><br></p>
           
     </section>
 
