--- a/LoLJenats.html
+++ b/LoLJenats.html
@@ -24,7 +24,7 @@
             <ul>
                 <a href="index.html"><i class="fa fa-home" style="font-size:22px;"></i> Home</a>
                 <a class="active"href="LoLJenats.html"><i class="fa fa-gamepad" style="font-size:22px;"></i> LoL Jenats</a>
-                <a href="projects.html"><i class="fa fa-paint-brush" style="font-size:22px;"></i> Games</a>
+                <a href="projects.html"><i class="fa fa-paint-brush" style="font-size:22px;"></i> Projects</a>
                 <a href="contact.html"><i class="fa fa-paper-plane" style="font-size:18px;"></i> Contact</a>
             </ul>
 
