--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,8 @@
 
     <section class="section1">
 
-        <p>Projects I have worked on so far:<br></p>
+        <p>Projects I have worked on so far:</p>
+        <p></p>
         <p>Distributed Whiteboard in Java</p>
         <p>Distributed Dictionary in Java</p>
         <p>Small Game in Java</p>
